@@ -35,6 +35,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   large numbers, or with numbers with increased precision.
   [bug introduced when numfmt was added in coreutils-8.21]
 
+  numfmt now handles leading zeros correctly, not counting them when
+  settings processing limits, and making them optional with floating point.
+  [bug introduced when numfmt was added in coreutils-8.21]
+
   paste no longer truncates output for large input files.  This would happen
   for example with files larger than 4GiB on 32 bit systems with a '\n'
   character at the 4GiB position.
